# 2D_Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  notes
include/: SDL2
res/shaders/: BasicFragmentShader.glsl  BasicVertexShader.glsl  fragment.glsl
shaders/: BasicVertexShader.glsl  vertex.glsl
src/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  Model.hpp  Renderer.hpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.hpp  main.cpp
src/Input/: Input.cpp  Input.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp  Texture.cpp
src/Renderer/Types/: RenderData.cpp  RenderData.hpp  RenderTypes.cpp  RenderTypes.hpp
src/ResourceManager/: Texture.cpp
src/Sandbox/: Game.cpp  Game.hpp  Types.hpp  main.cpp
src/Scene/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
